gccida/g1/gen_subprogram_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10643:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10657:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10684:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v44; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10692:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10757:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10776:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10799:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 10204, "gen_subprogram_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10808:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 10210, "gen_subprogram_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10832:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10847:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10853:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4441, "AT_unsigned"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10890:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10939:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10961:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10976:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4387, "AT_flag"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:10996:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:11052:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:11060:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v45 = ( int *)val_addr[1]; 
              ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/dwarf2out.c:11074:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_subprogram_die/src/obj/dwarf2out.o] Error 1
